# tail-recursive

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  tests.py
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml
tail_recursive/: __init__.py
