[tool.poetry]
name = "tail-recursive"
version = "1.0.0"
description = "Tail recursion with a simple decorator api."
authors = ["0scarB <oscarb@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
