[tool.poetry]
name = "tail-recursive"
version = "2.0.0"
description = "Tail recursion with a simple decorator api."
authors = ["0scarB <oscarb@protonmail.com>"]
license = "MIT"
readme="README.md"
homepage = "https://github.com/0scarB/tail-recursive"
repository = "https://github.com/0scarB/tail-recursive"
documentation = "https://github.com/0scarB/tail-recursive"
classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.8"
]


[tool.poetry.dependencies]
python = "^3.8"
pytest-timeout = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
