[tool.poetry]
name = "tail-recursive"
version = "2.1.0"
description = "Tail recursion with a simple decorator api."
authors = ["0scarB <oscarb@protonmail.com>"]
license = "MIT"
readme="README.md"
homepage = "https://github.com/0scarB/tail-recursive"
repository = "https://github.com/0scarB/tail-recursive"
documentation = "https://github.com/0scarB/tail-recursive"
classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.8"
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-timeout = "^2.0.2"
mypy = "v0.931"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
